--- a/lab3.html
+++ b/lab3.html
@@ -1,5 +1,8 @@
-html>
- <body onload="draw();">
+<html>
+ <body>
    <canvas id="canvas" width="150" height="150"></canvas>
+   <button onclick="draw()">
+     Character
+   </button>
  </body>
 </html>
